--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>jcsys</title>
+    <title>任务部署</title>
   </head>
   <body>
     <div class="container">
       <div id="app" class="aaa"></div>
     </div>
-
     <!-- built files will be auto injected -->
   </body>
 </html>
