任务分配和检测分配

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>任务部署</title>
   </head>
-  <body>
+  <body style="overflow-y: scroll">
     <div class="container">
       <div id="app" class="aaa"></div>
     </div>
