--- a/src/pages/check/check.html
+++ b/src/pages/check/check.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>检测分配</title>
 </head>
-<body>
+<body  style="overflow-y: scroll">
   <div class="container">
     <div id="app" class="aaa"></div>
   </div>
